Updating scripts to use specified Java JDK version.